<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">연암공과대학교 출석앱</string>
    <string name="default_server_url">http://10.0.2.2:8000</string>
    <string name="app_subtitle">스마트소프트웨어학과 얼굴 인식 출석 시스템</string>
    <string name="server_status_ready">서버 상태: 연결 전</string>
    <string name="server_status_checking">서버 상태: 확인 중...</string>
    <string name="server_status_success">서버 상태: 연결 성공</string>
    <string name="server_status_unknown">서버가 예상과 다른 응답을 반환했습니다.</string>
    <string name="server_status_failed">서버 상태: 연결 실패\n%1$s</string>
    <string name="session_empty">현재 활성 수업이 없습니다.</string>
    <string name="current_classroom_session_empty">현재 선택한 강의실에서 진행 중인 수업이 없습니다.</string>
    <string name="classroom_select_required">강의실을 먼저 선택해 주세요.</string>
    <string name="session_load_failed">현재 수업 정보 조회 실패\n%1$s</string>
    <string name="session_active">활성</string>
    <string name="session_inactive">비활성</string>
    <string name="loading">조회 중...</string>
    <string name="error_unknown">알 수 없는 오류</string>
    <string name="main_current_class_title">현재 수업 정보</string>
    <string name="main_subject">과목명</string>
    <string name="main_classroom">강의실</string>
    <string name="main_date">날짜</string>
    <string name="main_start_time">시작 시간</string>
    <string name="main_end_time">종료 시간</string>
    <string name="main_active_status">활성 상태</string>
    <string name="main_server_title">서버 연결 상태</string>
    <string name="main_server_url_hint">FastAPI 서버 주소</string>
    <string name="main_check_server">서버 연결 확인</string>
    <string name="main_start_attendance">출석하기</string>
    <string name="main_attendance_list">출석 현황 보기</string>
    <string name="main_register_student">학생 관리</string>
    <string name="main_admin">관리자 페이지</string>
    <string name="main_server_setting">서버 설정</string>
    <string name="role_select_student_title">학생 페이지</string>
    <string name="role_select_student_description">얼굴 인식으로 출석을 진행합니다.</string>
    <string name="role_select_student_button">학생으로 시작</string>
    <string name="role_select_admin_title">관리자 페이지</string>
    <string name="role_select_admin_description">과목, 학생 등록, 출석 현황을 관리합니다.</string>
    <string name="role_select_admin_button">관리자로 시작</string>
    <string name="role_select_server_url">서버 주소: %1$s</string>
    <string name="role_select_server_status_required">서버 상태 확인 필요</string>
    <string name="role_select_change_classroom">강의실 변경</string>
    <string name="classroom_select_title">강의실을 선택하세요</string>
    <string name="classroom_select_label">강의실 선택</string>
    <string name="classroom_admin_button">관리자</string>
    <string name="classroom_select">선택</string>
    <string name="classroom_selected">선택됨</string>
    <string name="classroom_selected_none">현재 선택 강의실: 선택된 강의실이 없습니다</string>
    <string name="classroom_selected_format">현재 선택 강의실: %1$s</string>
    <string name="classroom_empty">등록된 강의실이 없습니다.\n관리자 페이지에서 강의실을 추가해 주세요.</string>
    <string name="classroom_empty_admin_button">관리자 페이지로 이동</string>
    <string name="classroom_load_failed">강의실 목록을 불러오지 못했습니다.</string>
    <string name="classroom_invalid_id">강의실 ID가 없어 선택할 수 없습니다.</string>
    <string name="classroom_name_empty">강의실명 없음</string>
    <string name="classroom_building_empty">건물명: -</string>
    <string name="classroom_floor_empty">층수: -</string>
    <string name="classroom_building_format">건물명: %1$s</string>
    <string name="classroom_floor_format">층수: %1$s</string>
    <string name="student_page_title">학생 페이지</string>
    <string name="student_attendance_guide_title">출석 안내</string>
    <string name="student_attendance_guide_camera">카메라 화면에서 얼굴을 중앙 가이드에 맞춰주세요.</string>
    <string name="student_attendance_guide_hold">3초 동안 얼굴이 인식되면 출석 처리됩니다.</string>
    <string name="student_back_to_role_select">역할 선택으로 돌아가기</string>
    <string name="student_session_load_failed">현재 수업 정보를 불러오지 못했습니다.</string>
    <string name="admin_badge">관리자</string>
    <string name="admin_classroom_not_selected">선택된 강의실이 없습니다. 강의실 관리에서 강의실을 추가하거나 선택해 주세요.</string>
    <string name="admin_function_title">관리자 기능</string>
    <string name="admin_manage_classrooms">강의실 관리</string>
    <string name="admin_manage_subjects">과목 관리</string>
    <string name="admin_subject_management_not_ready">과목 관리 화면은 준비 중입니다.</string>
    <string name="admin_title">관리자 페이지</string>
    <string name="admin_subtitle">과목 및 수강생 관리</string>
    <string name="add_subject">과목 추가</string>
    <string name="subject_name">과목명</string>
    <string name="professor_name">담당 교수</string>
    <string name="classroom">강의실</string>
    <string name="classroom_name">강의실명</string>
    <string name="classroom_building_name">건물명</string>
    <string name="classroom_floor">층수</string>
    <string name="classroom_description">설명</string>
    <string name="classroom_active">사용 중</string>
    <string name="classroom_manage_title">강의실 관리</string>
    <string name="classroom_manage_subtitle">출석에 사용할 강의실을 추가하고 수정합니다.</string>
    <string name="classroom_manage_empty">등록된 강의실이 없습니다.</string>
    <string name="classroom_count_initial">강의실 0개</string>
    <string name="classroom_count">강의실 %1$d개</string>
    <string name="classroom_add">강의실 추가</string>
    <string name="classroom_edit">강의실 수정</string>
    <string name="classroom_delete">강의실 삭제</string>
    <string name="classroom_deactivate">비활성화</string>
    <string name="classroom_delete_confirm">%1$s 강의실을 비활성화하시겠습니까?</string>
    <string name="classroom_delete_success">강의실이 비활성화되었습니다.</string>
    <string name="classroom_delete_failed">강의실을 삭제하지 못했습니다.</string>
    <string name="classroom_save_success">강의실이 저장되었습니다.</string>
    <string name="classroom_save_failed">강의실을 저장하지 못했습니다.</string>
    <string name="classroom_name_required">강의실명을 입력해 주세요.</string>
    <string name="classroom_manage_meta">건물명: %1$s / 층수: %2$s / 상태: %3$s</string>
    <string name="classroom_update_save">수정 저장</string>
    <string name="classroom_direct_input">새 강의실 직접 입력</string>
    <string name="classroom_save_and_select">강의실 저장 후 선택</string>
    <string name="day_of_week">요일</string>
    <string name="day_of_week_select_label">요일 선택</string>
    <string name="day_of_week_required">요일을 선택해 주세요.</string>
    <string name="detail">상세 보기</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="back">뒤로</string>
    <string name="refresh">새로고침</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="create">추가</string>
    <string name="subject_count_initial">과목 0개</string>
    <string name="subject_count">과목 %1$d개</string>
    <string name="subject_empty">등록된 과목이 없습니다.</string>
    <string name="subject_list_load_failed">과목 목록을 불러오지 못했습니다.</string>
    <string name="subject_create_failed">과목을 추가하지 못했습니다.</string>
    <string name="subject_delete_confirm">이 과목을 삭제하시겠습니까?</string>
    <string name="subject_delete_failed">과목을 삭제하지 못했습니다.</string>
    <string name="subject_name_required">과목명을 입력해 주세요.</string>
    <string name="subject_invalid_id">과목 ID가 없어 상세 화면으로 이동할 수 없습니다.</string>
    <string name="subject_name_empty">과목명 없음</string>
    <string name="subject_professor_empty">담당 교수: -</string>
    <string name="subject_classroom_empty">강의실: -</string>
    <string name="subject_professor_format">담당 교수: %1$s</string>
    <string name="subject_classroom_format">강의실: %1$s</string>
    <string name="subject_detail_placeholder">과목 상세 화면 준비 중\n과목 ID: %1$d</string>
    <string name="subject_detail_title">과목 상세</string>
    <string name="subject_detail_load_failed">과목 정보를 불러오지 못했습니다.</string>
    <string name="subject_students_load_failed">수강 학생 목록을 불러오지 못했습니다.</string>
    <string name="subject_students_empty">수강 학생이 없습니다.</string>
    <string name="subject_student_count_initial">수강 학생 0명</string>
    <string name="subject_student_count">수강 학생 %1$d명</string>
    <string name="add_student">학생 추가</string>
    <string name="add">추가</string>
    <string name="remove">제거</string>
    <string name="remove_student">학생 제거</string>
    <string name="remove_student_confirm">%1$s 학생을 이 과목에서 제거하시겠습니까?</string>
    <string name="remove_student_success">학생이 제거되었습니다.</string>
    <string name="remove_student_failed">학생을 제거하지 못했습니다.</string>
    <string name="add_student_failed">학생을 추가하지 못했습니다.</string>
    <string name="students_load_failed">학생 목록을 불러오지 못했습니다.</string>
    <string name="students_empty">등록된 학생이 없습니다.</string>
    <string name="student_select_required">추가할 학생을 선택해 주세요.</string>
    <string name="student_select_format">%1$s / %2$s / %3$s</string>
    <string name="student_invalid_id">학생 ID가 없어 처리할 수 없습니다.</string>
    <string name="student_no_empty">학번 없음</string>
    <string name="student_name_empty">이름 없음</string>
    <string name="student_department_empty">학과 없음</string>
    <string name="create_session">수업 세션 생성</string>
    <string name="save_session">세션 저장</string>
    <string name="class_date_hint">수업 날짜 선택</string>
    <string name="start_time_hint">시작 시간 선택</string>
    <string name="end_time_hint">종료 시간 선택</string>
    <string name="class_date_required">수업 날짜를 입력해 주세요.</string>
    <string name="start_time_required">시작 시간을 선택해 주세요.</string>
    <string name="end_time_required">종료 시간을 선택해 주세요.</string>
    <string name="end_time_after_start_required">종료 시간은 시작 시간보다 늦어야 합니다.</string>
    <string name="session_create_failed">수업 세션을 생성하지 못했습니다.</string>
    <string name="session_created_active">수업 세션이 생성되고 활성화되었습니다.</string>
    <string name="session_created_inactive">수업 세션이 생성되었습니다.</string>
    <string name="session_activate_now">생성 후 현재 활성 수업으로 설정</string>
    <string name="close">닫기</string>
</resources>
